Add jboss710 profile